# habitrac

./: .gitignore  CONTRIBUTING.md  README.md  Vagrantfile  netlify.toml
habitrac/: Procfile  manage.py  pyproject.toml  pytest.ini  requirements.txt
habitrac-docs/: docusaurus.config.js  package.json
habitrac-frontend/: .env  nuxt.config.js  package.json  tailwind.config.js  utils.js
habitrac-frontend/components/: Alert.vue  CodeWindow.vue  ControlBar.vue  DarkModeIcon.vue  HabitCycle.vue  HabitCycleBox.vue  LightModeIcon.vue  NavBar.vue  PieChart.vue
habitrac/accounts/: admin.py  managers.py  middlewares.py  models.py
habitrac/accounts/api/: resolvers.py
habitrac/accounts/api/schema/: inputs.graphql  payloads.graphql  types.graphql
habitrac/accounts/management/commands/: createdata.py
habitrac/accounts/migrations/: 0001_initial.py  0002_customuser_username_slug.py  0003_customuser_vault_password.py
habitrac/habitrac/: asgi.py  settings.py  urls.py  wsgi.py
habitrac/habitrac/api/: graphql_config.py  resolvers.py
habitrac/habitrac/api/schema/: root.graphql  scalars.graphql  types.graphql
habitrac/habits/: admin.py  apps.py  models.py
habitrac/habits/api/: resolvers.py
habitrac/habits/api/schema/: inputs.graphql  payloads.graphql  types.graphql
habitrac/habits/migrations/: 0001_initial.py  0002_auto_20210224_2212.py  0003_auto_20210226_0850.py  0004_auto_20210226_2021.py  0005_auto_20210227_1748.py  0006_auto_20210227_1750.py  0007_dailyhabit_vault.py
habitrac/utils/: general.py
habitrac/utils/handlers/: errors.py
tools/: generate  run-dev
(+60 files in other folders)
